--- a/views/result.ejs
+++ b/views/result.ejs
@@ -31,9 +31,8 @@
           
           </div>
 
-              <h4>Hello! from ICWEB PRO</h4>
+              <h4>Result</h4>
 
-              <form method="POST" action="format"  class="pt-3">
               
 
                 <div class="form-group">
@@ -43,11 +42,11 @@
                 </div>
                
                 <div class="mt-3">
-                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Format</button>
+                  <a href="/" class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">Back</a>
                 </div>
           
                
-              </form>
+             
             </div>
           </div>
         </div>
