--- a/views/result.ejs
+++ b/views/result.ejs
@@ -37,7 +37,7 @@
 
                 <div class="form-group">
                  
-                  <textarea placeholder="paste in the text to continue." name="text" id="" class="form-control form-control-lg"  cols="30" rows="15"></textarea>
+                  <textarea placeholder="paste in the text to continue." name="text" id="" class="form-control form-control-lg" value="<%=data%>"  cols="30" rows="15"></textarea>
                
                 </div>
                
